Polish layout, reviews, and floating UI

--- a/about.html
+++ b/about.html
@@ -56,10 +56,12 @@
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
 
       <nav class="nav" aria-label="Основное меню" id="main-menu">
-        <a href="services.html" class="nav-link">Услуги</a>
-        <a href="about.html" class="nav-link">О компании</a>
-        <a href="licenses.html" class="nav-link">Сертификаты</a>
-        <a href="contacts.html" class="nav-link">Контакты</a>
+        <div class="nav-links">
+          <a href="services.html" class="nav-link">Услуги</a>
+          <a href="about.html" class="nav-link active">О компании</a>
+          <a href="licenses.html" class="nav-link">Сертификаты</a>
+          <a href="contacts.html" class="nav-link">Контакты</a>
+        </div>
 
         <div class="lang-switcher" aria-label="Выбор языка">
           <button type="button" class="lang-btn active" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
