--- a/licenses.html
+++ b/licenses.html
@@ -47,10 +47,12 @@
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
 
       <nav class="nav" aria-label="Основное меню" id="main-menu">
-        <a href="services.html" class="nav-link">Услуги</a>
-        <a href="about.html" class="nav-link">О компании</a>
-        <a href="licenses.html" class="nav-link">Сертификаты</a>
-        <a href="contacts.html" class="nav-link">Контакты</a>
+        <div class="nav-links">
+          <a href="services.html" class="nav-link">Услуги</a>
+          <a href="about.html" class="nav-link">О компании</a>
+          <a href="licenses.html" class="nav-link active">Сертификаты</a>
+          <a href="contacts.html" class="nav-link">Контакты</a>
+        </div>
 
         <div class="lang-switcher" aria-label="Выбор языка">
           <button type="button" class="lang-btn active" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
@@ -160,19 +162,21 @@
 
     // Бургер
     document.addEventListener("DOMContentLoaded", function() {
-      const burger = document.querySelector('.burger');
-      const nav = document.querySelector('.nav');
+      var burger = document.querySelector('.burger');
+      var nav = document.querySelector('.nav');
       if (burger && nav) {
         burger.addEventListener('click', function(e) {
           e.stopPropagation();
-          nav.classList.toggle('open');
-          burger.classList.toggle('active');
-          document.body.classList.toggle('no-scroll');
+          var isOpen = nav.classList.toggle('open');
+          burger.classList.toggle('active', isOpen);
+          burger.setAttribute('aria-expanded', String(isOpen));
+          document.body.classList.toggle('no-scroll', isOpen);
         });
         document.addEventListener('click', function(e) {
           if (!burger.contains(e.target) && !nav.contains(e.target)) {
             nav.classList.remove('open');
             burger.classList.remove('active');
+            burger.setAttribute('aria-expanded', 'false');
             document.body.classList.remove('no-scroll');
           }
         });
