--- a/services.html
+++ b/services.html
@@ -49,24 +49,26 @@
 <body>
   <div id="google_translate_element" class="visually-hidden"></div>
 
-  <header class="header">
+  <header class="header" id="sticky-header">
     <div class="container header-flex">
       <a href="index.html" class="logo-link">
         <img src="logo.png" width="60" height="60" fetchpriority="high" decoding="async" class="logo-img" alt="Золотарь 58">
         <span class="logo-title">Золотарь 58</span>
       </a>
       <a href="index.html" class="header-title-mobile">Золотарь 58</a>
-      <nav class="nav">
-        <a href="services.html" class="active">Услуги</a>
-        <a href="about.html">О компании</a>
-        <a href="licenses.html">Сертификаты</a>
-        <a href="contacts.html">Контакты</a>
+      <nav class="nav" aria-label="Основное меню" id="main-menu">
+        <div class="nav-links">
+          <a href="services.html" class="nav-link active">Услуги</a>
+          <a href="about.html" class="nav-link">О компании</a>
+          <a href="licenses.html" class="nav-link">Сертификаты</a>
+          <a href="contacts.html" class="nav-link">Контакты</a>
+        </div>
         <div class="lang-switcher" aria-label="Выбор языка">
           <button type="button" class="lang-btn active" data-lang="ru" title="Русский" aria-pressed="true">🇷🇺 RU</button>
           <button type="button" class="lang-btn" data-lang="en" title="English" aria-pressed="false">🇬🇧 EN</button>
         </div>
       </nav>
-      <button class="burger" aria-label="Открыть меню"><span></span></button>
+      <button class="burger" aria-label="Открыть меню" aria-expanded="false" aria-controls="main-menu"><span></span></button>
     </div>
   </header>
 
@@ -240,17 +242,22 @@
 
     // Бургер
     document.addEventListener("DOMContentLoaded", function () {
-      const burger = document.querySelector('.burger');
-      const nav = document.querySelector('.nav');
+      var burger = document.querySelector('.burger');
+      var nav = document.querySelector('.nav');
       if (burger && nav) {
-        burger.addEventListener('click', function () {
-          nav.classList.toggle('open');
-          burger.classList.toggle('active');
+        burger.addEventListener('click', function (e) {
+          e.stopPropagation();
+          var isOpen = nav.classList.toggle('open');
+          burger.classList.toggle('active', isOpen);
+          burger.setAttribute('aria-expanded', String(isOpen));
+          document.body.classList.toggle('no-scroll', isOpen);
         });
         document.addEventListener('click', function (e) {
           if (!burger.contains(e.target) && !nav.contains(e.target)) {
             nav.classList.remove('open');
             burger.classList.remove('active');
+            burger.setAttribute('aria-expanded', 'false');
+            document.body.classList.remove('no-scroll');
           }
         });
       }
