--- a/contacts.html
+++ b/contacts.html
@@ -68,15 +68,6 @@
     </div>
   </header>
 
- <!-- Инфо-плашка -->
-<div class="working-now-bar" id="wnb" role="status" aria-live="polite">
-  <span class="working-icon" aria-hidden="true">💧</span>
-  <span class="wnb-label">На связи 24/7</span>
-  <span class="wnb-sep">•</span>
-  <span class="wnb-addr">Пушанина 46а, Пенза</span>
-  <button class="wnb-close" type="button" aria-label="Закрыть">×</button>
-</div>
-
 
   <main id="main">
     <section class="main-intro">
@@ -147,8 +138,10 @@
     <div class="container">
       <p class="footer-text">
         © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И.<br>
-        г. Пенза, ул. Пушанина, 46а<br>
-        <a href="tel:+79022073636">+7 (902) 207-36-36</a>
+        г. Пенза, ул. Пушанина, 46а ·
+        <a class="phone-link" href="tel:+79022073636">+7 (902) 207-36-36</a><br>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы на Яндекс.Услугах</a> ·
+        <a href="https://go.2gis.com/YrK6Y" target="_blank" rel="noopener nofollow">2ГИС</a>
       </p>
     </div>
   </footer>
@@ -159,6 +152,12 @@
       <path d="M12 4l-8 8h6v8h4v-8h6z"></path>
     </svg>
   </button>
+
+  <div class="working-now-bar" id="wnb">
+    <span class="emoji" aria-hidden="true">💧</span>
+    <b>На связи 24/7</b>
+    <button class="wnb-close" id="wnbClose" aria-label="Скрыть">×</button>
+  </div>
 
   <script>
     // ===== Google Translate init =====
@@ -238,25 +237,18 @@
   </script>
   <!-- Скрипт Google Translate -->
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-<script>
-document.addEventListener('DOMContentLoaded', function(){
-  var bar = document.getElementById('wnb');
-  if (bar){
-    var closeBtn = bar.querySelector('.wnb-close');
-    if (closeBtn) closeBtn.addEventListener('click', function(){ bar.classList.add('wnb-hidden'); });
 
-    var footer = document.querySelector('footer, .footer');
-    if ('IntersectionObserver' in window && footer){
-      var io = new IntersectionObserver(function(entries){
-        if (!entries.length) return;
-        if (entries[0].isIntersecting) bar.classList.add('wnb-hidden');
-        else bar.classList.remove('wnb-hidden');
-      }, {threshold: 0});
-      io.observe(footer);
-    }
-  }
-});
-</script>
-
+  <script>
+    (function(){
+      var wnb=document.getElementById('wnb'), btn=document.getElementById('wnbClose');
+      if(!wnb||!btn) return;
+      if(sessionStorage.getItem('wnb_hidden')==='1'){ wnb.style.display='none'; return; }
+      btn.addEventListener('click', function(){
+        wnb.style.opacity='0'; wnb.style.pointerEvents='none';
+        sessionStorage.setItem('wnb_hidden','1');
+        setTimeout(function(){ if(wnb) wnb.remove(); }, 250);
+      });
+    })();
+  </script>
 </body>
 </html>
