--- a/index.html
+++ b/index.html
@@ -80,15 +80,6 @@
     </div>
   </header>
 
-  <!-- Плашка «на связи 24/7» -->
-  <div class="working-now-bar" role="status" aria-live="polite">
-    <span class="emoji" aria-hidden="true">💧</span>
-    На связи 24/7
-    <span class="wnb-sep">•</span>
-    <span class="wnb-addr">Пушанина 46а, Пенза</span>
-    <button class="wnb-close" type="button" aria-label="Закрыть">×</button>
-  </div>
-
   <!-- Контент -->
   <main id="main">
     <section class="hero container">
@@ -259,11 +250,11 @@
   <footer class="footer" role="contentinfo">
     <div class="container">
       <p class="footer-text">
-        © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И. | Ассенизатор в Пензе, ул. Пушанина, 46а<br>
-        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы Яндекс.Услуги</a> |
-        <a href="https://go.2gis.com/YrK6Y" target="_blank" rel="noopener nofollow">2ГИС</a> |
-        <a href="https://www.avito.ru/penza/predlozheniya_uslug/prochistka_kanalizatsii_ustranenie_zasorov_3980560866" target="_blank" rel="noopener nofollow">Avito</a><br>
-        <a class="footer-phone" href="tel:+79022073636">+7 (902) 207-36-36</a>
+        © <span id="year"></span> Золотарь 58 — ИП Зоткин А.И.<br>
+        г. Пенза, ул. Пушанина, 46а ·
+        <a class="phone-link" href="tel:+79022073636">+7 (902) 207-36-36</a><br>
+        <a href="https://uslugi.yandex.ru/profile/AleksandrZotkin-886001" target="_blank" rel="noopener nofollow">Отзывы на Яндекс.Услугах</a> ·
+        <a href="https://go.2gis.com/YrK6Y" target="_blank" rel="noopener nofollow">2ГИС</a>
       </p>
     </div>
   </footer>
@@ -272,6 +263,12 @@
   <button id="toTop" class="to-top" aria-label="Наверх" title="Наверх">
     <svg width="18" height="18" viewBox="0 0 24 24" aria-hidden="true"><path d="M12 4l-8 8h6v8h4v-8h6z"></path></svg>
   </button>
+
+  <div class="working-now-bar" id="wnb">
+    <span class="emoji" aria-hidden="true">💧</span>
+    <b>На связи 24/7</b>
+    <button class="wnb-close" id="wnbClose" aria-label="Скрыть">×</button>
+  </div>
 
   <!-- Скрипты -->
   <script>
@@ -340,15 +337,20 @@
       onScroll();
     })();
 
-    // Плашка «на связи 24/7» — закрытие на мобиле
-    (function(){
-      var bar = document.querySelector('.working-now-bar');
-      var btn = document.querySelector('.wnb-close');
-      if (!bar || !btn) return;
-      btn.addEventListener('click', function(){ bar.classList.add('wnb-hidden'); });
-    })();
   </script>
 
+  <script>
+    (function(){
+      var wnb=document.getElementById('wnb'), btn=document.getElementById('wnbClose');
+      if(!wnb||!btn) return;
+      if(sessionStorage.getItem('wnb_hidden')==='1'){ wnb.style.display='none'; return; }
+      btn.addEventListener('click', function(){
+        wnb.style.opacity='0'; wnb.style.pointerEvents='none';
+        sessionStorage.setItem('wnb_hidden','1');
+        setTimeout(function(){ if(wnb) wnb.remove(); }, 250);
+      });
+    })();
+  </script>
   <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 </body>
 </html>
